--- a/apps/races/templates/races/races_list.html
+++ b/apps/races/templates/races/races_list.html
@@ -1,32 +1,32 @@
 {% extends 'base.html' %}
-
 {% block title %}Races{% endblock %}
-
 {% block content %}
-
-<div class="bg-light grey_container">
-  <div class="container">
-    <div class="bd-masthead" id="content">
-      {% if races_count == 0 %}
-      <div class='text-center'>
-        <h1 class="mb-4">There are no races</h1>
-      </div>
-      {% else %}
-      <h2 class="text-center">There are {{ races_count }} racer{{ races_count|pluralize }}</h2>
-      {% endif %}
-
+<div class="grey_container">
+  <div class="container mt-5 mb-5 w-50">
+    <div class="bd-masthead mt-5" id="content">
       <div class="list-group mb-5 mt-5">
         {% for race in races %}
         <a href="{{ race.get_absolute_url }}" class="list-group-item list-group-item-action">
-          <h5 class="mb-1">
-            {{ race.name }}
-          </h5>
-          <small class="text-muted">{{ race.creation_date|timesince }} ago</small>
+          <div class="d-flex align-middle">
+            <div class="me-auto">
+              <h5 class="mb-1 mt-1">{{ race.name }} <span class="badge rounded-pill bg-primary">{{ race.racers_count }}/40</span></h5>
+              <small class="text-muted">{{ race.creation_date|timesince }} ago</small>
+            </div>
+            <h4 class="mt-2">
+              {% if not race.date_of_completion %}
+              <span class="badge rounded-pill bg-success mt-1">ACTIVE</span>
+              {% else %}
+              <span class="badge rounded-pill bg-secondary">OVER</span>
+              {% endif %}
+            </h4>
+          </div>
         </a>
+        {% empty %}
+        <h4 class="text-danger mt-3 mb-3 text-center">No results found</h4>
         {% endfor %}
       </div>
     </div>
   </div>
 </div>
-
+{% include 'pagination.html' %}
 {% endblock %}
