--- a/apps/races/templates/races/race_detail.html
+++ b/apps/races/templates/races/race_detail.html
@@ -25,7 +25,7 @@
           </li>
         </ul>
         <div class="d-flex justify-content-between align-items-center mt-3">
-          <a href="" class="btn btn-outline-danger">Apply</a>
+          <a href="{% url 'races:apply_for_race' race.pk %}" class="btn btn-outline-danger">Apply</a>
           <small class="text-muted">{{ race.creation_date|timesince }} ago</small>
         </div>
       </div>
