--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
             {% if request.user.is_authenticated %}
             <li class="nav-item dropdown">
               <a class="nav-link nav_link_base" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" data-toggle="dropdown">
-              {{ request.user.username }} (№{{ request.user.number }})
+              {{ request.user.username }} ({% if request.user.is_staff %}STAFF{% else %}#{{ request.user.number }}{% endif %})
               </a>
               <ul class="dropdown-menu site-menu">
                 <li class="ms-4">
@@ -41,14 +41,16 @@
                   <hr>
                 </li>
                 <li class="ms-4">
-                  <a class="nav-link nav_link_base" href="" aria-current="page" type='submit'><i class="fa-solid fa-right-from-bracket"></i> Log out</a>
+                  <form action="{% url 'racers:logout' %}?next=/" method="POST" id="frm_logout"> {% csrf_token %}
+                      <a class="nav-link nav_link_base" href="javascript:$('#frm_logout').submit();" aria-current="page"><i class="fa-solid fa-right-from-bracket"></i> Log out</a>
+                  </form>
                 </li>
               </ul>
             </li>
             {% else %}
             <li class="nav-item dropdown">
               <a class="nav-link nav_link_base {% if request.path == '/u/login/' or request.path == '/u/register/' %} text-danger {% endif %}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" data-toggle="dropdown">
-              <i class="fa-regular fa-user"></i>
+              <i class="fa-solid fa-arrow-right-to-bracket"></i>
               </a>
               <ul class="dropdown-menu site-menu">
                 <li class="ms-4">
@@ -82,6 +84,8 @@
     </div>
     {% endfor %}
     {% endif %}
+    <script src="https://kit.fontawesome.com/40bf0cc06c.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
