--- a/apps/races/templates/races/races_list.html
+++ b/apps/races/templates/races/races_list.html
@@ -17,7 +17,7 @@
               {% endif %}
             </div>
             <h4 class="mt-2">
-              {% if not race.date_of_completion %}
+              {% if not race.completion_date %}
               <span class="badge bg-success mt-1">ACTIVE</span>
               {% else %}
               <span class="badge bg-secondary">OVER</span>
