--- a/apps/races/templates/races/races_list.html
+++ b/apps/races/templates/races/races_list.html
@@ -26,7 +26,7 @@
           </div>
         </a>
         {% empty %}
-        <h4 class="text-danger mt-3 mb-3 text-center">No results found</h4>
+        <h4 class="mt-3 mb-3 text-center">No results found</h4>
         {% endfor %}
       </div>
     </div>
