Active/Completed Races, Car Detail/Delete, other minor changes

--- a/apps/cars/templates/cars/object_create_base.html
+++ b/apps/cars/templates/cars/object_create_base.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Get {{ object_name }}{% endblock %}
+{% block title %}Apply {{ object_name }}{% endblock %}
 {% block content %}
 {% load widget_tweaks %}
 <div class="container mt-5 mb-5">
