--- a/apps/racers/templates/racers/racer_update.html
+++ b/apps/racers/templates/racers/racer_update.html
@@ -18,7 +18,7 @@
           <button id='save_song' style="visibility: hidden;" type="submit">Save</button>
         </form>
         <div class="d-flex">
-          <button class="btn btn-outline-danger me-auto" onclick="document.getElementById('save_song').click();">Save</button>
+          <button class="btn btn-outline-primary me-auto" onclick="document.getElementById('save_song').click();">Save</button>
         </div>
       </div>
     </div>
