--- a/apps/cars/templates/cars/car_update.html
+++ b/apps/cars/templates/cars/car_update.html
@@ -10,15 +10,15 @@
           {% csrf_token %}
           {% for field in form %}
           <div class="mb-3">
-            <label class="form-label text-danger">{{ field.label_tag }}</label>
+            <label class="form-label">{{ field.label_tag }}</label>
             {% render_field field class="form-control" placeholder=field.label %}
-            <div class="form-text text-danger">{{ field.help_text }}</div>
+            <div class="form-text">{{ field.help_text }}</div>
           </div>
           {% endfor %}
           <button id='save_album' style="visibility: hidden;" type="submit">Save</button>
         </form>
         <div class="d-flex">
-          <button class="btn btn-outline-secondary me-auto" onclick="document.getElementById('save_album').click();">Save</button>
+          <button class="btn btn-outline-primary me-auto" onclick="document.getElementById('save_album').click();">Save</button>
         </div>
       </div>
     </div>
